Fix sheet bg color on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@
     --card: 0 0 0%;
     --card-foreground: 210 40% 98%;
 
-    --popover: 0 0 3%;
+    --popover: 0 0 0%;
     --popover-foreground: 210 40% 98%;
 
     --primary: 210 40% 98%;
